# randofetch

./: README.md  pyproject.toml
src/randofetch/: __about__.py  __init__.py  __main__.py
src/randofetch/cli/: __init__.py  config.py  config_gui.py  fetcher.py
src/randofetch/config/: fetchers.yaml
src/randofetch/gui/: toga.py
